Finish header and properly formatted the fox photo with text.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
             <li>Fox 3</li>
         </ul>
     </div>
-    <div class="hero">
-        <h1>This fox Website is Awesome</h1>
-        <p>iyugsdayudsyuasfeygu idsaufduiosao usa uihas ia iaYQAW78W</p>
-        <button class="sign-up">Sign Up</button>
-        <img class="header-photo" src ="photos/fox-us-capitol-1500x1000.webp" alt="Cute fox">
+    <div class="container">
+        <div class="hero">
+            <h1>This fox Website is Awesome</h1>
+            <p>iyugsdayudsyuasfeygu idsaufduiosao usa uihas ia iaYQAW78W</p>
+            <button class="sign-up">Sign Up</button>
+        </div>
+        <div class="uh">
+            <img class="header-photo" src="photos/fox-us-capitol-1500x1000.webp" alt="Cute fox">
+        </div>
+    </div>
+    <div class = "box-section">
+
+        
     </div>
 </body>
 
