Try to add text under boxes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,33 @@
             <img class="header-photo" src="photos/fox-us-capitol-1500x1000.webp" alt="Cute fox">
         </div>
     </div>
-    <div class = "box-section">
+    <div class="box-section">
+        <h2 class="random-info">Some random fox information.</h2>
+        <div class="single-box-contain">
 
-        
+            <div class="box">
+
+            </div>
+            <p class="par">Foxes are members of the Canidae family, which means they're related to wolves, jackals, and dogs. </p>
+        </div>
+        <div class="single-box-contain">
+            <div class="box">
+
+            </div>
+            <p class="par">wsdqdwquuhdwiuhadiuhdauiwdyuiagdiuyagydiugdyugayudgyuagduyiagduyiawgyuid</p>
+        </div>
+        <div class="single-box-contain">
+            <div class="box">
+
+            </div>
+            <p class="par">wsdqdwquuhdwiuhadiuhdauiwdyuiagdiuyagydiugdyugayudgyuagduyiagduyiawgyuid</p>
+        </div>
+        <div class="single-box-contain">
+            <div class="box">
+
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
