Add tect below boxes

--- a/index.html
+++ b/index.html
@@ -32,31 +32,33 @@
     </div>
     <div class="box-section">
         <h2 class="random-info">Some random fox information.</h2>
-        <div class="single-box-contain">
-
+        <div class="boxes">
+            <div class="1">
+                <div class="box">
+                </div>
+            </div>
             <div class="box">
 
             </div>
-            <p class="par">Foxes are members of the Canidae family, which means they're related to wolves, jackals, and dogs. </p>
-        </div>
-        <div class="single-box-contain">
             <div class="box">
 
             </div>
-            <p class="par">wsdqdwquuhdwiuhadiuhdauiwdyuiagdiuyagydiugdyugayudgyuagduyiagduyiawgyuid</p>
-        </div>
-        <div class="single-box-contain">
-            <div class="box">
-
-            </div>
-            <p class="par">wsdqdwquuhdwiuhadiuhdauiwdyuiagdiuyagydiugdyugayudgyuagduyiagduyiawgyuid</p>
-        </div>
-        <div class="single-box-contain">
             <div class="box">
 
             </div>
         </div>
-    </div>
+        <div class="text">
+            <p class="um">  Foxes are members of the Canidae family,
+                 which means they're related to 
+                 wolves, jackals,
+                  and dogs. </p>
+            <p class="um">Although there are 37 animals called foxes,
+                 only 12 are considered “true foxes,” 
+                 meaning they're from the genus 
+                 Vulpes.</p>
+            <p class="um">uhysaddyuyudauyasyugsuy</p>
+            <p class="um">uhysaddyuyudauyasyugsuy</p>
+        </div>
     </div>
 </body>
 
