Add quote section to webpage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>iyugsdayudsyuasfeygu idsaufduiosao usa uihas ia iaYQAW78W</p>
             <button class="sign-up">Sign Up</button>
         </div>
-        <div class="uh">
+        <div class="top-fox-photo">
             <img class="header-photo" src="photos/fox-us-capitol-1500x1000.webp" alt="Cute fox">
         </div>
     </div>
@@ -48,18 +48,30 @@
             </div>
         </div>
         <div class="text">
-            <p class="um">  Foxes are members of the Canidae family,
-                 which means they're related to 
-                 wolves, jackals,
-                  and dogs. </p>
-            <p class="um">Although there are 37 animals called foxes,
-                 only 12 are considered “true foxes,” 
-                 meaning they're from the genus 
-                 Vulpes.</p>
-            <p class="um">uhysaddyuyudauyasyugsuy</p>
-            <p class="um">uhysaddyuyudauyasyugsuy</p>
+            <p class="para"> Foxes are members of the Canidae family,
+                which means they're related to
+                wolves, jackals,
+                and dogs. </p>
+            <p class="para">Although there are 37 animals called foxes,
+                only 12 are considered “true foxes,”
+                meaning they're from the genus
+                Vulpes.</p>
+            <p class="para">uhysaddyuyudauyasyugsuy</p>
+            <p class="para">uhysaddyuyudauyasyugsuy</p>
         </div>
     </div>
+    <div class="quote">
+        <div class="quote-container">
+            <p id="my-quote"><i>Foxes are one of my favorite animals, I think they are cute and also very cool.
+                    I wish I could have one as a pet but I know that they are not good pets. So I will have to just
+                    admire them from a distance and do things such as making this website.</i></p>
+        </div>
+        <p id="name"><strong>- Michael Metcalf</strong></p>
+
+    </div>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
