--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         <p id="name"><strong>- Michael Metcalf</strong></p>
 
     </div>
+    <div class="call-to-action">
+        <div class ="call-holder">
+
+        </div>
+
+    </div>
     <footer>
 
     </footer>
