Add rest of sign up section + footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <div class="header">
+        
         <div class="title">Fox page</div>
         <ul class="top-links">
             <li>Fox 1</li>
@@ -23,7 +24,10 @@
     <div class="container">
         <div class="hero">
             <h1>This fox Website is Awesome</h1>
-            <p>iyugsdayudsyuasfeygu idsaufduiosao usa uihas ia iaYQAW78W</p>
+            <p>I made this website simply because foxes are one of my
+                favorite animals so I decided to make a practice website
+                 about them.
+            </p>
             <button class="sign-up">Sign Up</button>
         </div>
         <div class="top-fox-photo">
@@ -70,12 +74,15 @@
 
     </div>
     <div class="call-to-action">
-        <div class ="call-holder">
-
+        <div class="call-holder">
+            <div class="text-holder">
+                <h1 id ="fox1">Want more fox Pictures?</h1>
+                <p id ="here">Sign up here!</p>
+            </div>
+            <button class ="sign-up"> Sign Up </button>
         </div>
-
     </div>
-    <footer>
+    <footer class ="foot">
 
     </footer>
 </body>
