Replace header photo, change colors, and add some mobile support

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
 
     <div class="header">
-        
         <div class="title">Fox page</div>
         <ul class="top-links">
             <li>Fox 1</li>
@@ -26,12 +25,13 @@
             <h1>This fox Website is Awesome</h1>
             <p>I made this website simply because foxes are one of my
                 favorite animals so I decided to make a practice website
-                 about them.
+                about them.
             </p>
-            <button class="sign-up">Sign Up</button>
+            <button class="sign-up2">Sign Up</button>
         </div>
         <div class="top-fox-photo">
-            <img class="header-photo" src="photos/fox-us-capitol-1500x1000.webp" alt="Cute fox">
+            <img class="header-photo" src="/home/michael/repos/Landing-Page-Project/photos/pexels-photo-271905.jpeg"
+                alt="Cute fox">
         </div>
     </div>
     <div class="box-section">
@@ -76,14 +76,14 @@
     <div class="call-to-action">
         <div class="call-holder">
             <div class="text-holder">
-                <h1 id ="fox1">Want more fox Pictures?</h1>
-                <p id ="here">Sign up here!</p>
+                <h1 id="fox1">Want more fox Pictures?</h1>
+                <p id="here">Sign up here!</p>
             </div>
-            <button class ="sign-up"> Sign Up </button>
+            <button class="sign-up"> Sign Up </button>
         </div>
     </div>
-    <footer class ="foot">
-
+    <footer class="foot">
+        <p>Website made by Michale Metcalf</p>
     </footer>
 </body>
 
